# pytuiplayer

./: .gitignore  README.md  pyproject.toml
scripts/: test_main.py  test_mpv.py  test_pyradio.py  test_raw_mpv.py
src/: ast_stub.py  conftest.py  pytuiplayer.spec  test_main.py  test_mpv.py  test_pyradio.py  test_raw_mpv.py  test_station_player.py  test_tui_app_logic.py  test_unit_mpv.py
src/pytuiplayer/: __init__.py  mpv_player.py  musicplayer_tui.css  station_player.py  stations.json  tui_app.py  tui_app_ast.pyi
src/tests/: test_app_integration.py  test_main_entry.py  test_mpv_player.py  test_now_playing_widget.py  test_station_player.py  test_tui_app.py
